--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "antd": "^5.26.7",
     "axios": "^1.11.0",
+    "element-react": "^1.4.34",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
