--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "element-react": "^1.4.34",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "rsuite": "^5.83.3",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
