--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>sportsManage</artifactId>
+    <artifactId>TomatoMall</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>TomatoMall</name>
     <description>TomatoMall</description>
@@ -65,7 +65,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-       <!--数据校验-->
+        <!--数据校验-->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -119,7 +119,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.example.sports.TomatoMallApplication</mainClass>
+                    <mainClass>com.example.tomatomall.TomatoMallApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
@@ -135,3 +135,4 @@
     </build>
 
 </project>
+
